--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import './src/styles/global.css'
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +9,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portafolio Developer | Desarrollador Web e Ingeniero de Software</title>
 	</head>
 	<body>
 		<slot />
@@ -14,9 +18,4 @@
 
 <style>
 	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
 </style>
