--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro';
-import Hero from '../components/Hero.astro';
+import Navbar from '../components/Sections/Navbar.astro';
+import Hero from '../components/Sections/Hero.astro';
+import Experience from '../components/Sections/Experience.astro';
+import Proyects from '../components/Sections/Proyects.astro';
 ---
 
 <Layout>
     <Navbar/>
     <Hero/>
+    <Experience/>
+    <Proyects/>
 </Layout>
