--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,8 @@ import './src/styles/global.css'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Portafolio Developer | Desarrollador Web e Ingeniero de Software</title>
+		<title>Portafolio Joseph UM | Desarrollador Web e Ingeniero de Software</title>
+		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
 	</head>
 	<body>
 		<slot />
