--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,16 +12,7 @@
 html {
     font-family: "Onest Variable", system-ui, sans-serif;
     color: var(--color-text);
-    background: linear-gradient(
-        180deg,
-        var(--color-primary) 0%,
-        var(--color-background) 10%,
-        var(--color-background) 20%,
-        var(--color-background_secondary) 100%
-    );
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background: rgb(32, 32, 32)
 }
 
 body {
@@ -29,6 +20,23 @@ body {
     width: 100vw;
     height: 100vh;
     position: relative;
+}
+
+h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: var(--color-text);
+}
+
+/*CONTAINER ALIGNMENT*/
+#container {
+    padding-inline: 5vh;
+  }
+  
+@media (min-width: 1650px) {
+    #container {
+        padding-inline: 50vh;
+    }
 }
 
 .clip_triangle_shape {
