--- a/src/components/Sections/Hero.astro
+++ b/src/components/Sections/Hero.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="container" class="flex justify-center items-center py-34">
+<section id="hero" class="container-element flex justify-center items-center">
 	<div class="text-left space-y-3">
 		<span class="text-xl text-left text-secondary font-semibold">
 			Desarrollador Web | Ingeniero de Software
@@ -11,21 +11,21 @@
 			Joseph Ugalde
 		</h2>
 		<p class="text-left text-balance text-xl/7 text-neutral-400 font-semibold w-full">
-			Soy apasionado <span class="text-secondary/80">Desarrollador Web y estudiante de Ingeniería en Software</span>. Me encanta aprender nuevas tecnologías y mejorar mis habilidades. 
-			Actualmente estoy buscando una oportunidad para aplicar mis conocimientos y crecer profesionalmente.
+			Soy un apasionado <span class="text-secondary/80">Desarrollador Web y estudiante de Ingeniería en Software</span> costarricense. Me encanta aprender nuevas tecnologías y mejorar mis habilidades. 
+			Actualmente busco oportunidades para aplicar mis conocimientos y crecer profesionalmente.
 		</p>
 		<div class="flex gap-x-5 mt-5">
 			<button class="bg-neutral-800 text-secondary px-5 py-2 rounded-xl border border-secondary hover:bg-secondary hover:text-black cursor-pointer transition-all">
 				Contáctame
 			</button>
-			<button class="bg-neutral-800 flex items-center gap-2 px-5 rounded-full border border-neutral-500 hover:bg-[#0077b5] hover:border-[#0077b5] cursor-pointer transition-all">
+			<a href="https://www.linkedin.com/in/joseph-ugalde-m-0b4b4227a/" class="bg-neutral-800 flex items-center gap-2 px-5 rounded-full border border-neutral-500 hover:bg-[#0077b5] hover:border-[#0077b5] cursor-pointer transition-all">
 				<i class="fab fa-linkedin fa-2x"></i>
 				Linkedin
-			</button>
-			<button class="bg-neutral-800 flex items-center gap-2 px-5 rounded-full border border-neutral-500 hover:invert cursor-pointer transition-all">
+			</a>
+			<a href="https://github.com/DELTA2507" class="bg-neutral-800 flex items-center gap-2 px-5 rounded-full border border-neutral-500 hover:invert cursor-pointer transition-all">
 				<i class="fab fa-github fa-2x"></i>
 				GitHub
-			</button>
+			</a>
 		</div>
 	</div>
 </section>
