--- a/src/components/ExperienceEvent.astro
+++ b/src/components/ExperienceEvent.astro
@@ -1,23 +1,44 @@
 ---
-const {date, role, place, description} = Astro.props;
+interface Props {
+    role: string;
+    place: string;
+    date: string;
+    stack: string[];
+    description: string;
+}
+
+const {role, place, date, stack, description} = Astro.props as Props;
 ---
 
 <li class="mb-10 ms-4">
-    <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-35 sm:mt-3.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-secondary"></div>
-    <div class="flex items-center justify-between">
-        <div>
-            <h3 class="text-2xl whitespace-nowrap font-semibold text-gray-900 dark:text-secondary">
-                {role}
-            </h3>
-            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                {place}
-            </h3>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-                {date}
-            </time>
+    <div class="absolute w-3 h-3 bg-neutral-200 rounded-full mt-3.5 -start-1.5 border border-white dark:border-neutral-900 dark:bg-secondary"></div>
+    <div class="flex flex-col md:flex-row md:items-start justify-between gap-4">
+      <div class="md:flex-1">
+        <h3 class="text-2xl whitespace-nowrap font-semibold text-neutral-900 dark:text-secondary">
+          {role}
+        </h3>
+        <a href="https://cileto.com/" class="text-xl font-semibold text-neutral-900 dark:text-white">
+          {place}
+        </a>
+        <br>
+        <time class="mb-1 text-sm font-normal leading-none text-neutral-400 dark:text-neutral-400">
+          {date}
+        </time>
+        <div class="flex gap-2 mt-2">
+            {stack.map(stackIcon => (
+                <img 
+                    class="w-8 h-8 rounded-full" 
+                    src={`/stackIcons/${stackIcon}.svg`} 
+                    alt="Rounded icon" 
+                />
+            ))}
         </div>
-        <p class="text-base px-10 font-normal text-gray-500 dark:text-gray-400">
-            {description}
+      </div>
+      <div class="md:w-1/2">
+        <p class="text-base font-normal text-neutral-500 dark:text-neutral-400">
+          {description}
         </p>
+      </div>
     </div>
-</li>
+  </li>
+  
