--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Sections/Navbar.astro';
+import Navbar from '../components/Sections/Navbar';
 import Hero from '../components/Sections/Hero.astro';
 import Experience from '../components/Sections/Experience.astro';
-import Proyects from '../components/Sections/Proyects.astro';
+import Projects from '../components/Sections/Projects.astro';
+import Footer from '../components/Sections/Footer.astro';
 ---
 
 <Layout>
     <Navbar/>
     <Hero/>
     <Experience/>
-    <Proyects/>
+    <Projects/>
+    <Footer/>
 </Layout>
