Minor Vercel Fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Sections/Navbar';
+import Navbar from '../components/Sections/Navbar.tsx';
 import Hero from '../components/Sections/Hero.astro';
 import Experience from '../components/Sections/Experience.astro';
 import Projects from '../components/Sections/Projects.astro';
