--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../../src/styles/global.css'
+import '@fortawesome/fontawesome-free/css/all.min.css'
 ---
 
 <!doctype html>
@@ -10,7 +11,6 @@ import '../../src/styles/global.css'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Portafolio Joseph UM | Desarrollador Web e Ingeniero de Software</title>
-		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css"/>
 	</head>
 	<body>
 		<slot />
