Minor changes, fixes

--- a/src/components/Sections/Projects.astro
+++ b/src/components/Sections/Projects.astro
@@ -15,6 +15,32 @@ const projects = [
         ],
         description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
     },
+    {
+        image: "https://www.hubspot.com/hs-fs/hubfs/lemon%20(1).jpg?width=650&height=425&name=lemon%20(1).jpg",
+        link: "https://example.com/proyect1",
+        title: "iLists",
+        stack: [
+            'nextjs',
+            'typescript',
+            'react',
+            'supabase',
+            'tailwindcss'
+        ],
+        description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
+    },
+    {
+        image: "https://www.hubspot.com/hs-fs/hubfs/lemon%20(1).jpg?width=650&height=425&name=lemon%20(1).jpg",
+        link: "https://example.com/proyect1",
+        title: "iLists",
+        stack: [
+            'nextjs',
+            'typescript',
+            'react',
+            'supabase',
+            'tailwindcss'
+        ],
+        description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
+    },
 ];
 ---
 
@@ -23,7 +49,7 @@ const projects = [
         <i class="fa-solid fa-code"></i>
         Proyectos
     </h1>
-    <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
+    <section class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10">
         {projects.map(project => (
             <ProjectCard {...project} />
         ))}
