--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,12 +23,14 @@ html {
     color: var(--color-text);
     background: rgb(32, 32, 32);
     scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    padding: 0;
+    width: 100dvw;
+    height: 100dvh;
     position: relative;
     overflow-x: hidden;
 }
