--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,10 +29,9 @@ html {
 body {
     margin: 0;
     padding: 0;
-    width: 100dvw;
-    height: 100dvh;
+    width: 100%;
+    height: 100%;
     position: relative;
-    overflow-x: hidden;
 }
 
 h1 {
@@ -44,10 +43,12 @@ h1 {
 /*CONTAINER ALIGNMENT*/
 .container-element {
     padding-inline: 5vh;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-top: 10rem;
+    padding-bottom: 20rem;
   }
   
 @media (min-width: 1650px) {
