--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,11 +44,12 @@ h1 {
 .container-element {
     padding-inline: 5vh;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 10rem;
-    padding-bottom: 20rem;
+    padding-top: 15rem;
+    padding-bottom: 15rem;
   }
   
 @media (min-width: 1650px) {
