Fixed font issues, final style fixes

--- a/src/components/Sections/Experience.astro
+++ b/src/components/Sections/Experience.astro
@@ -17,6 +17,7 @@ const experience = [
     {
         role:"Prácticante de Desarrollo Web",
         place:"Cileto",
+        link:"https://cileto.com/",
         date:"Oct 2024 - Nov 2024 (2 Meses)",
         stack: [
             'supabase',
