--- a/src/components/Sections/Footer.astro
+++ b/src/components/Sections/Footer.astro
@@ -9,6 +9,7 @@ import ContactForm from "../ContactForm.tsx"
     </div>
     <div class="mx-auto text-left text-xs">
     <div class="flex justify-center gap-4 py-5">
+        <p>&copy; 2025 Joseph Ugalde Murillo and DELTA D&D All rights reserved.</p>
         <p>&copy; 2025 Delta Development and Design</p>
         <p>&copy; 2025 Joseph Ugalde Murillo</p>
     </div>
