--- a/src/components/Sections/Hero.astro
+++ b/src/components/Sections/Hero.astro
@@ -4,7 +4,7 @@
 
 <section id="hero" class="container-element w-full px-4 sm:px-6 lg:px-8 py-12 flex justify-center items-center">
 	<div class="max-w-3xl w-full text-left space-y-4">
-		<span class="block text-base sm:text-lg text-secondary font-semibold">
+		<span class="block text-xl text-secondary font-semibold">
 			Desarrollador Web | Ingeniero de Software
 		</span>
 		<h2 class="text-5xl font-bold bg-gradient-to-r from-neutral-200 to-neutral-700 bg-clip-text text-transparent pb-2">
@@ -15,9 +15,11 @@
 			Actualmente busco oportunidades para aplicar mis conocimientos y crecer profesionalmente.
 		</p>
 		<div class="flex flex-wrap gap-4 mt-6">
-			<button class="bg-neutral-800 text-secondary px-5 py-2 rounded-xl border border-secondary hover:bg-secondary hover:text-black transition-all">
+			<a 
+				href="mailto:joseph@example.com?subject=Nuevo%20proyecto%20web&body=Hola%20Joseph,%20tengo%20un%20sitio%20que%20quiero%20desarrollar."
+				class="bg-neutral-800 text-secondary px-5 py-2 rounded-xl border border-secondary hover:bg-secondary hover:text-black transition-all">
 				Contáctame
-			</button>
+			</a>
 			<a href="https://www.linkedin.com/in/joseph-ugalde-m-0b4b4227a/" class="bg-neutral-800 flex items-center gap-2 px-5 py-2 rounded-full border border-neutral-500 hover:bg-[#0077b5] hover:border-[#0077b5] transition-all">
 				<i class="fab fa-linkedin fa-lg"></i>
 				Linkedin
