--- a/src/components/ExperienceEvent.astro
+++ b/src/components/ExperienceEvent.astro
@@ -2,22 +2,23 @@
 interface Props {
     role: string;
     place: string;
+    link?: string;
     date: string;
     stack: string[];
     description: string;
 }
 
-const {role, place, date, stack, description} = Astro.props as Props;
+const {role, place, link, date, stack, description} = Astro.props as Props;
 ---
 
 <li class="mb-10 ms-4">
     <div class="absolute w-3 h-3 bg-neutral-200 rounded-full mt-3.5 -start-1.5 border border-white dark:border-neutral-900 dark:bg-secondary"></div>
     <div class="flex flex-col md:flex-row md:items-start justify-between gap-4">
       <div class="md:flex-1">
-        <h3 class="text-2xl whitespace-nowrap font-semibold text-neutral-900 dark:text-secondary">
+        <h3 class="text-2xl whitespace-nowrap font-semibold text-secondary">
           {role}
         </h3>
-        <a href="https://cileto.com/" class="text-xl font-semibold text-neutral-900 dark:text-white">
+        <a href={link} class="text-xl font-semibold text-white">
           {place}
         </a>
         <br>
