--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -15,7 +15,7 @@ const { title, description, image, stack, link } = Astro.props as Props;
         href={link} 
         target="_blank"
         rel="noopener noreferrer"
-        class="flex flex-col justify-center w-full h-full bg-neutral-800 rounded-lg transition-all duration-300 ease-in-out transform hover:-translate-y-3"
+        class="flex flex-col justify-center w-full h-full bg-neutral-800 rounded-lg transition-all duration-300 ease-in-out transform hover:-translate-y-3 hover:shadow-lg hover:shadow-primary"
     >
         <img
             src={image} 
