--- a/src/Sections/Footer.astro
+++ b/src/Sections/Footer.astro
@@ -1,11 +1,13 @@
 ---
-import ContactForm from "../ContactForm.tsx"
+import AnimatedTitle from "../components/AnimatedTitle"
+import ContactForm from "../components/ContactForm.tsx"
 ---
 
 <footer id="contact" class=" text-white py-6 space-y-10">
-  <h1 class="text-center">Contacto</h1>
+  <AnimatedTitle title="Contacto" icon="fa-envelope" className="justify-center" client:load/>
+  
   <div class="flex justify-center items-center gap-20 max-w-full bg-white/10 backdrop-blur-xl py-20 px-10 shadow-lg border-secondary border-t-2 border-b-2 flex-col md:flex-row">
-    <p class="text-2xl leading-12 md:text-4xl max-w-md">
+    <p class="text-2xl leading-12 md:text-4xl max-w-md anim">
       ¿Tienes una <span class="text-secondary font-bold">idea</span>? <br> 
       ¿Algún <span class="text-secondary font-bold">proyecto soñado</span>? <br>
       ¿Tal vez una <span class="text-secondary font-bold">página web en mente</span>?
@@ -14,7 +16,7 @@ import ContactForm from "../ContactForm.tsx"
       <ContactForm client:only="react" />
     </div>
   </div>
-  <div class="flex justify-center gap-4 py-5 text-sm text-neutral-400 flex-wrap text-center">
+  <div class="flex justify-center gap-4 py-5 text-sm text-neutral-40 bg-neutral-900 0 flex-wrap text-center">
     <p>&copy; 2025 Joseph Ugalde Murillo and DELTA D&D</p>
     <p>&copy; 2025 Delta Development and Design</p>
     <p>&copy; 2025 Joseph Ugalde Murillo</p>
