--- a/src/components/ExperienceEvent.astro
+++ b/src/components/ExperienceEvent.astro
@@ -12,7 +12,7 @@ const {role, place, link, date, stack, description} = Astro.props as Props;
 ---
 
 <li class="mb-10 ms-4">
-    <div class="absolute w-3 h-3 bg-neutral-200 rounded-full mt-3.5 -start-1.5 border border-white dark:border-neutral-900 dark:bg-secondary"></div>
+    <div class="absolute w-3 h-3 rounded-full mt-3.5 -start-1.5 border border-neutral-900 bg-secondary"></div>
     <div class="flex flex-col md:flex-row md:items-start justify-between gap-4">
       <div class="md:flex-1">
         <h3 class="text-2xl whitespace-nowrap font-semibold text-secondary">
@@ -22,7 +22,7 @@ const {role, place, link, date, stack, description} = Astro.props as Props;
           {place}
         </a>
         <br>
-        <time class="mb-1 text-sm font-normal leading-none text-neutral-400 dark:text-neutral-400">
+        <time class="mb-1 text-sm font-normal leading-none text-neutral-400">
           {date}
         </time>
         <div class="flex gap-2 mt-2">
@@ -36,7 +36,7 @@ const {role, place, link, date, stack, description} = Astro.props as Props;
         </div>
       </div>
       <div class="md:w-1/2">
-        <p class="text-base font-normal text-neutral-500 dark:text-neutral-400">
+        <p class="text-base font-normal text-neutral-400">
           {description}
         </p>
       </div>
