--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Sections/Navbar.tsx';
-import Hero from '../components/Sections/Hero.astro';
-import Experience from '../components/Sections/Experience.astro';
-import Projects from '../components/Sections/Projects.astro';
-import Footer from '../components/Sections/Footer.astro';
+import Navbar from '../components/Navbar.tsx';
+import Hero from '../Sections/Hero.astro';
+import Experience from '../Sections/Experience.astro';
+import Projects from '../Sections/Projects.astro';
+import Footer from '../Sections/Footer.astro';
 ---
 
 <Layout>
