--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,7 @@ html {
     background-size: 100% 100%;
     scroll-behavior: smooth;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -38,7 +39,8 @@ body {
 
 h1 {
     font-size: 2.5rem;
-    font-weight: 700;
+    font-weight: 600;
+    letter-spacing: 5px;
     color: var(--color-text);
 }
 
