Added Stagger appearing animations to proyects and experience events

--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -1,6 +1,6 @@
 ---
+import AnimatedStaggeredContainerExperience from "../components/AnimatedStaggeredContainerExperience";
 import AnimatedTitle from "../components/AnimatedTitle";
-import ExperienceEvent from "../components/ExperienceEvent.astro";
 
 const experience = [
     {
@@ -35,9 +35,5 @@ const experience = [
 ---
 <section id="experience" class="container-element space-y-10 bg-neutral-900">
     <AnimatedTitle title="Experiencia" icon="fa-briefcase" client:load/>
-    <ol class="relative border-s border-neutral-700">           
-        {experience.map(event => (
-            <ExperienceEvent {...event} />
-        ))}
-    </ol>
+    <AnimatedStaggeredContainerExperience experience={experience} client:load/>
 </section>
