Added option for place's logo in case it is a company

--- a/src/Sections/Experience.astro
+++ b/src/Sections/Experience.astro
@@ -18,6 +18,7 @@ const experience = [
     {
         role:"Prácticante de Desarrollo Web",
         place:"Cileto",
+        placeLogo:"/companyLogos/cileto.svg",
         link:"https://cileto.com/",
         date:"Oct 2024 - Nov 2024 (2 Meses)",
         stack: [
