--- a/src/Sections/Projects.astro
+++ b/src/Sections/Projects.astro
@@ -1,51 +1,10 @@
 ---
 import AnimatedTitle from "../components/AnimatedTitle";
 import AnimatedStaggeredContainerProjects from "../components/AnimatedStaggeredContainerProjects";
-
-const projects = [
-    {
-        image: "https://www.hubspot.com/hs-fs/hubfs/lemon%20(1).jpg?width=650&height=425&name=lemon%20(1).jpg",
-        link: "https://example.com/proyect1",
-        title: "iLists",
-        stack: [
-            'nextjs',
-            'typescript',
-            'react',
-            'supabase',
-            'tailwindcss'
-        ],
-        description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
-    },
-    {
-        image: "https://www.hubspot.com/hs-fs/hubfs/lemon%20(1).jpg?width=650&height=425&name=lemon%20(1).jpg",
-        link: "https://example.com/proyect1",
-        title: "iLists",
-        stack: [
-            'nextjs',
-            'typescript',
-            'react',
-            'supabase',
-            'tailwindcss'
-        ],
-        description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
-    },
-    {
-        image: "https://www.hubspot.com/hs-fs/hubfs/lemon%20(1).jpg?width=650&height=425&name=lemon%20(1).jpg",
-        link: "https://example.com/proyect1",
-        title: "iLists",
-        stack: [
-            'nextjs',
-            'typescript',
-            'react',
-            'supabase',
-            'tailwindcss'
-        ],
-        description: "'La solución a medida para tus listas de compras'. Una aplicación web para crear, gestionar y personalizar listas de compras. Donde el usuario tiene la capacidad de personalizar diversos aspectos de la aplicación, además de poder compartirla con otros usuarios."
-    },
-];
+import projects from "../data/projects";
 ---
 
 <section id="projects" class="container-element space-y-10">
     <AnimatedTitle title="Proyectos" icon="fa-code" client:load/>
-    <AnimatedStaggeredContainerProjects proyects={projects} client:load>
+    <AnimatedStaggeredContainerProjects projects={projects} client:load>
 </section>
