--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../../src/styles/global.css'
+import '../../src/styles/proyectCard.css'
 import '@fortawesome/fontawesome-free/css/all.min.css'
 ---
 
