Created Carousel and Breadcrumbs component for dynamic slug pages, Created Slug to show all the info about a proyect along with its breadcrumbs and a carousel along with other addons, Created Blogs and Proyects page for further development, Created separate layout for proyects slug, Several minor style changes.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.tsx';
-import Hero from '../Sections/Hero.astro';
-import Experience from '../Sections/Experience.astro';
-import Projects from '../Sections/Projects.astro';
-import Footer from '../Sections/Footer.astro';
+import Hero from '../landing-sections/Hero.astro';
+import Experience from '../landing-sections/Experience.astro';
+import Projects from '../landing-sections/Projects.astro';
+import Footer from '../landing-sections/Footer.astro';
 ---
 
 <Layout>
