--- a/src/landing-sections/Hero.astro
+++ b/src/landing-sections/Hero.astro
@@ -7,11 +7,11 @@
 		<span class="block text-xl text-secondary font-semibold">
 			Desarrollador Web | Ingeniero de Software
 		</span>
-		<h2 class="text-5xl font-bold bg-gradient-to-r from-neutral-200 to-neutral-700 bg-clip-text text-transparent pb-2">
+		<h2 class="text-5xl md:text-6xl font-bold bg-gradient-to-r from-neutral-200 to-neutral-700 bg-clip-text text-transparent pb-2">
 			Joseph Ugalde
 		</h2>
 		<p class="text-base sm:text-lg text-neutral-400 font-semibold text-balance">
-			Soy un apasionado <span class="text-secondary/80">Desarrollador Web y estudiante de Ingeniería en Software</span> costarricense. Me encanta aprender nuevas tecnologías y mejorar mis habilidades. 
+			Soy un apasionado <span class="text-secondary">Desarrollador Web y estudiante de Ingeniería en Software</span> costarricense. Me encanta aprender nuevas tecnologías y mejorar mis habilidades. 
 			Actualmente busco oportunidades para aplicar mis conocimientos y crecer profesionalmente.
 		</p>
 		<div class="flex flex-wrap gap-4 mt-6">
