--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.tsx';
+import Navbar from '../components/Navbar';
 import Hero from '../landing-sections/Hero.astro';
 import Experience from '../landing-sections/Experience.astro';
 import Projects from '../landing-sections/Projects.astro';
