Several folder hierarchy and structure changes, Added boilerplate for Blogs, Added frontmatter and necesary configs for Blog/Post like functionality, Integrated markdown content displaying inside .astro page for dynamic content creation, Added table of contents to proyects slug to navigate across headings, added necesary styles for markdown content, Several style changes.

--- a/src/landing-sections/Projects.astro
+++ b/src/landing-sections/Projects.astro
@@ -1,10 +1,12 @@
 ---
 import AnimatedTitle from "../components/AnimatedTitle";
 import AnimatedStaggeredContainerProjects from "../components/AnimatedStaggeredContainerProjects";
-import projects from "../data/projects";
+
+const projectPages = import.meta.glob('../content/projects/*.md', { eager: true });
+const projects = Object.values(projectPages).map((file: any) => file.frontmatter);
 ---
 
 <section id="projects" class="container-element space-y-10">
     <AnimatedTitle title="Proyectos" icon="fa-code" client:load/>
-    <AnimatedStaggeredContainerProjects projects={projects} client:load>
+    <AnimatedStaggeredContainerProjects projects={projects} client:load/>
 </section>
