--- a/src/layouts/SlugLayout.astro
+++ b/src/layouts/SlugLayout.astro
@@ -1,8 +1,9 @@
 ---
-import '../../src/styles/projectSlugLayout.css'
+import '../../src/styles/markdown-content.css'
+import '../../src/styles/slug-layout.css'
 import '@fortawesome/fontawesome-free/css/all.min.css'
 
-const { title } = Astro.props || "Portafolio Joseph UM | Desarrollador Web e Ingeniero de Software";
+const { title = "Portafolio Joseph UM | Desarrollador Web e Ingeniero de Software" } = Astro.props;
 ---
 <!doctype html>
 <html lang="en">
