--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import '../../src/styles/global.css'
 import '../../src/styles/index.css'
-import '../../src/styles/proyectCard.css'
+import '../../src/styles/proyect-card.css'
 import '@fortawesome/fontawesome-free/css/all.min.css'
 ---
 
